# churn-prediction-8project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/processed/: reference_features.parquet
docs/: technical_doc.md
notebooks/: 01_eda.ipynb
scripts/: retrain.py  train.py
src/churn_prediction/: api.py  data_loader.py  model.py  monitoring.py
tests/: conftest.py  test_api.py  test_model.py
